--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -57,3 +57,30 @@ footer {
     border-top: 1px solid var(--color-gray-200);
     margin-top: 5rem;
 }
+
+
+@media screen and (max-width: 1024px) {
+    .footer__container {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 4rem;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    footer {
+        margin-top: 7rem;
+    }
+
+    .footer__container {
+        grid-template-columns: 1fr;
+        gap: 3rem;
+    }
+
+    .footer__container article {
+        align-items: center;
+    }
+
+    .footer__container article p {
+        text-align: center;
+    }
+}
