--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -69,7 +69,8 @@ body {
   color: var(--color-gray-200);
   line-height: 1.7;
   overflow-x: hidden;
-  background-color: var(--color-gray-600)
+  background: var(--color-gray-600) url("../asset/images/bg_texture.png");
+
 }
 
 .container {
@@ -195,6 +196,10 @@ img {
 ======================================================================================================*/
 @import url("./footer.css");
 
+/* HEADER STYLES
+=========================================================================================================*/
+@import url("./header.css");
+
 
 body {
   margin: 0;
@@ -228,5 +233,9 @@ code {
   h1 {
     font-size: 2.2rem;
     line-height: 1.3;
+  }
+
+  section {
+    margin-top: 7rem;
   }
 }
