--- a/src/styles/programs.css
+++ b/src/styles/programs.css
@@ -23,3 +23,15 @@
         grid-template-columns: repeat(2, 1fr);
     }
 }
+
+@media screen and (max-width: 600px) {
+    .programs__wrapper {
+        grid-template-columns: 1fr;
+        gap: 2rem;
+    }
+
+    .programs__program {
+        width: 84%;
+        margin: 0 auto;
+    }
+}
